--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,17 @@
 Not_use
 __pycache__
+env/Lib/site-packages/PIL/
+env/Lib/site-packages/JSON_minify-0.3.0.dist-info/
+env/Lib/site-packages/Pillow-7.1.2.dist-info/
+env/Lib/site-packages/bounding_box-0.1.3.dist-info/
+env/Lib/site-packages/bounding_box/
+env/Lib/site-packages/cv2/
+env/Lib/site-packages/dlib-19.17.0.dist-info/
+env/Lib/site-packages/dlib.cp37-win_amd64.pyd
+env/Lib/site-packages/json_minify/
+env/Lib/site-packages/numpy-1.18.5.dist-info/
+env/Lib/site-packages/numpy/
+env/Lib/site-packages/opencv_python-4.2.0.34.dist-info/
+env/Lib/site-packages/scipy-1.3.1.dist-info/
+env/Lib/site-packages/scipy/
+env/Scripts/f2py.exe
